@@ -19,36 +19,37 @@ package com.nageoffer.ai.ragent.rag.core.retrieve;
 
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.util.StrUtil;
-import com.nageoffer.ai.ragent.rag.dto.KbResult;
-import com.nageoffer.ai.ragent.rag.dto.RetrievalContext;
-import com.nageoffer.ai.ragent.rag.dto.SubQuestionIntent;
 import com.nageoffer.ai.ragent.framework.convention.RetrievedChunk;
 import com.nageoffer.ai.ragent.framework.trace.RagTraceNode;
+import com.nageoffer.ai.ragent.rag.config.SearchChannelProperties;
 import com.nageoffer.ai.ragent.rag.core.intent.IntentNode;
 import com.nageoffer.ai.ragent.rag.core.intent.NodeScore;
 import com.nageoffer.ai.ragent.rag.core.intent.NodeScoreFilters;
-import com.nageoffer.ai.ragent.rag.core.mcp.MCPParameterExtractor;
-import com.nageoffer.ai.ragent.rag.core.mcp.MCPRequest;
-import com.nageoffer.ai.ragent.rag.core.mcp.MCPResponse;
-import com.nageoffer.ai.ragent.rag.core.mcp.MCPTool;
-import com.nageoffer.ai.ragent.rag.core.mcp.MCPToolExecutor;
-import com.nageoffer.ai.ragent.rag.core.mcp.MCPToolRegistry;
+import com.nageoffer.ai.ragent.rag.core.mcp.McpParameterExtractor;
+import com.nageoffer.ai.ragent.rag.core.mcp.McpToolExecutor;
+import com.nageoffer.ai.ragent.rag.core.mcp.McpToolRegistry;
 import com.nageoffer.ai.ragent.rag.core.prompt.ContextFormatter;
+import com.nageoffer.ai.ragent.rag.core.prompt.PromptTemplateLoader;
+import com.nageoffer.ai.ragent.rag.dto.KbResult;
+import com.nageoffer.ai.ragent.rag.dto.RetrievalContext;
+import com.nageoffer.ai.ragent.rag.dto.SubQuestionIntent;
+import io.modelcontextprotocol.spec.McpSchema.CallToolResult;
+import io.modelcontextprotocol.spec.McpSchema.TextContent;
+import io.modelcontextprotocol.spec.McpSchema.Tool;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
 import java.util.HashMap;
-
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
+import java.util.stream.Collectors;
 
-import static com.nageoffer.ai.ragent.rag.constant.RAGConstant.DEFAULT_TOP_K;
+import static com.nageoffer.ai.ragent.rag.constant.RAGConstant.CONTEXT_FORMAT_PATH;
 import static com.nageoffer.ai.ragent.rag.constant.RAGConstant.MULTI_CHANNEL_KEY;
 
 /**
@@ -74,24 +75,26 @@ import static com.nageoffer.ai.ragent.rag.constant.RAGConstant.MULTI_CHANNEL_KEY
 @RequiredArgsConstructor
 public class RetrievalEngine {
 
+    private final SearchChannelProperties searchProperties;
+
     /** 上下文格式化器，将检索结果格式化为 LLM 可读的文本 */
     private final ContextFormatter contextFormatter;
 
+    private final PromptTemplateLoader templateLoader;
+
     /** MCP 参数提取器，从用户问题中提取工具调用所需参数 */
-    private final MCPParameterExtractor mcpParameterExtractor;
+    private final McpParameterExtractor mcpParameterExtractor;
 
     /** MCP 工具注册表，管理所有可用的 MCP 工具执行器 */
-    private final MCPToolRegistry mcpToolRegistry;
+    private final McpToolRegistry mcpToolRegistry;
 
     /** 多通道检索引擎，负责 KB 场景下的向量检索和后处理 */
     private final MultiChannelRetrievalEngine multiChannelRetrievalEngine;
 
     /** 子问题上下文构建线程池，用于并行处理多个子问题 */
-    @Qualifier("ragContextThreadPoolExecutor")
     private final Executor ragContextExecutor;
 
     /** MCP 工具批量执行线程池，用于并行调用多个 MCP 工具 */
-    @Qualifier("mcpBatchThreadPoolExecutor")
     private final Executor mcpBatchExecutor;
 
     /**
@@ -118,7 +121,7 @@ public class RetrievalEngine {
         }
 
         // 确定实际 topK：优先使用传入值，无效则回退到全局默认值
-        int finalTopK = topK > 0 ? topK : DEFAULT_TOP_K;
+        int finalTopK = topK > 0 ? topK : searchProperties.getDefaultTopK();
         // 为每个子问题提交异步上下文构建任务，利用线程池并行加速
         List<CompletableFuture<SubQuestionContext>> tasks = subIntents.stream()
                 .map(si -> CompletableFuture.supplyAsync(
@@ -141,26 +144,45 @@ public class RetrievalEngine {
                 .map(CompletableFuture::join)
                 .toList();
 
-        // 分别拼接 KB 上下文和 MCP 上下文，合并 intentChunks
-        StringBuilder kbBuilder = new StringBuilder();
-        StringBuilder mcpBuilder = new StringBuilder();
         Map<String, List<RetrievedChunk>> mergedIntentChunks = new HashMap<>();
-
         for (SubQuestionContext context : contexts) {
-            if (StrUtil.isNotBlank(context.kbContext())) {
-                appendSection(kbBuilder, context.question(), context.kbContext());
-            }
-            if (StrUtil.isNotBlank(context.mcpContext())) {
-                appendSection(mcpBuilder, context.question(), context.mcpContext());
-            }
             if (CollUtil.isNotEmpty(context.intentChunks())) {
                 mergedIntentChunks.putAll(context.intentChunks());
             }
         }
 
+        boolean singleQuestion = contexts.size() == 1;
+        String kbContext;
+        String mcpContext;
+
+        if (singleQuestion) {
+            SubQuestionContext only = contexts.get(0);
+            kbContext = StrUtil.emptyIfNull(only.kbContext()).trim();
+            mcpContext = StrUtil.emptyIfNull(only.mcpContext()).trim();
+        } else {
+            StringBuilder kbBuilder = new StringBuilder();
+            StringBuilder mcpBuilder = new StringBuilder();
+            int globalIndex = 0;
+            for (SubQuestionContext context : contexts) {
+                boolean hasKb = StrUtil.isNotBlank(context.kbContext());
+                boolean hasMcp = StrUtil.isNotBlank(context.mcpContext());
+                if (hasKb || hasMcp) {
+                    globalIndex++;
+                }
+                if (hasKb) {
+                    appendSection(kbBuilder, "sub-question-kb-wrapper", globalIndex, context.question(), context.kbContext());
+                }
+                if (hasMcp) {
+                    appendSection(mcpBuilder, "sub-question-mcp-wrapper", globalIndex, context.question(), context.mcpContext());
+                }
+            }
+            kbContext = kbBuilder.toString().trim();
+            mcpContext = mcpBuilder.toString().trim();
+        }
+
         return RetrievalContext.builder()
-                .mcpContext(mcpBuilder.toString().trim())
-                .kbContext(kbBuilder.toString().trim())
+                .mcpContext(mcpContext)
+                .kbContext(kbContext)
                 .intentChunks(mergedIntentChunks)
                 .build();
     }
@@ -205,20 +227,15 @@ public class RetrievalEngine {
                 .orElse(fallbackTopK);
     }
 
-    /**
-     * 拼接子问题上下文段落到 StringBuilder
-     * <p>
-     * 格式为 Markdown 结构：以分隔线开头，包含子问题和相关文档两部分。
-     *
-     * @param builder  目标 StringBuilder
-     * @param question 子问题文本
-     * @param context  该子问题对应的检索上下文文本
-     */
-    private void appendSection(StringBuilder builder, String question, String context) {
-        builder.append("---\n")
-                .append("**子问题**：").append(question).append("\n\n")
-                .append("**相关文档**：\n")
-                .append(context).append("\n\n");
+    private void appendSection(StringBuilder builder, String section, int index, String question, String context) {
+        if (!builder.isEmpty()) {
+            builder.append("\n");
+        }
+        builder.append(templateLoader.renderSection(CONTEXT_FORMAT_PATH, section, Map.of(
+                "index", String.valueOf(index),
+                "question", question,
+                "context", context
+        )));
     }
 
     /**
@@ -235,12 +252,12 @@ public class RetrievalEngine {
             return "";
         }
 
-        List<MCPResponse> responses = executeMcpTools(question, mcpIntents);
-        if (responses.isEmpty() || responses.stream().noneMatch(MCPResponse::isSuccess)) {
+        Map<String, List<CallToolResult>> toolResults = executeMcpTools(question, mcpIntents);
+        if (toolResults.isEmpty()) {
             return "";
         }
 
-        return contextFormatter.formatMcpContext(responses, mcpIntents);
+        return contextFormatter.formatMcpContext(toolResults, mcpIntents);
     }
 
     /**
@@ -287,30 +304,27 @@ public class RetrievalEngine {
     }
 
     /**
-     * 并行执行多个 MCP 工具调用
-     * <p>
-     * 先将意图节点转换为 {@link MCPRequest}，再使用 {@code mcpBatchExecutor} 线程池并行执行。
-     * 每个工具调用互相独立，某个失败不影响其他工具的执行。
-     *
-     * @param question        用户子问题文本
-     * @param mcpIntentScores MCP 意图得分列表
-     * @return MCP 工具调用响应列表（包含成功和失败的响应）
+     * 执行 MCP 工具调用，返回按 toolId 分组的结果
      */
-    private List<MCPResponse> executeMcpTools(String question, List<NodeScore> mcpIntentScores) {
+    private Map<String, List<CallToolResult>> executeMcpTools(String question,
+                                                              List<NodeScore> mcpIntentScores) {
         if (CollUtil.isEmpty(mcpIntentScores)) {
-            return List.of();
+            return Map.of();
         }
 
-        List<CompletableFuture<MCPResponse>> futures = mcpIntentScores.stream()
+        List<CompletableFuture<ToolOutput>> futures = mcpIntentScores.stream()
                 .map(ns -> CompletableFuture.supplyAsync(
                         () -> {
+                            String toolId = ns.getNode().getMcpToolId();
                             try {
-                                MCPRequest request = buildMcpRequest(question, ns.getNode());
-                                return request == null ? null : executeSingleMcpTool(request);
+                                CallToolResult result = executeSingleMcpTool(question, ns.getNode());
+                                return result == null ? null : new ToolOutput(toolId, result);
                             } catch (Exception e) {
-                                String toolId = ns.getNode().getMcpToolId();
                                 log.error("MCP 工具调用异常, toolId: {}", toolId, e);
-                                return MCPResponse.error(toolId, "EXECUTION_ERROR", "工具调用异常: " + e.getMessage());
+                                return new ToolOutput(toolId, CallToolResult.builder()
+                                        .content(List.of(new TextContent("工具调用异常: " + e.getMessage())))
+                                        .isError(true)
+                                        .build());
                             }
                         },
                         mcpBatchExecutor
@@ -320,62 +334,30 @@ public class RetrievalEngine {
         return futures.stream()
                 .map(CompletableFuture::join)
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.groupingBy(
+                        ToolOutput::toolId,
+                        Collectors.mapping(ToolOutput::result, Collectors.toList())
+                ));
     }
 
-    /**
-     * 执行单个 MCP 工具调用
-     * <p>
-     * 从注册表中查找执行器并调用，异常时返回错误响应而非抛出异常，
-     * 确保单个工具失败不会导致整个检索流程崩溃。
-     *
-     * @param request MCP 工具请求
-     * @return MCP 工具响应（成功或错误）
-     */
-    private MCPResponse executeSingleMcpTool(MCPRequest request) {
-        String toolId = request.getToolId();
-        Optional<MCPToolExecutor> executorOpt = mcpToolRegistry.getExecutor(toolId);
-        if (executorOpt.isEmpty()) {
-            log.warn("MCP 工具执行失败, 工具不存在: {}", toolId);
-            return MCPResponse.error(toolId, "TOOL_NOT_FOUND", "工具不存在: " + toolId);
-        }
-
-        try {
-            return executorOpt.get().execute(request);
-        } catch (Exception e) {
-            log.error("MCP 工具执行异常, toolId: {}", toolId, e);
-            return MCPResponse.error(toolId, "EXECUTION_ERROR", "工具调用异常: " + e.getMessage());
-        }
-    }
-
-    /**
-     * 构建单个 MCP 工具请求
-     * <p>
-     * 从意图节点获取工具 ID，查找工具定义，使用 {@link MCPParameterExtractor}
-     * 从用户问题中提取工具所需参数。支持意图节点上配置的自定义参数提取 Prompt 模板。
-     *
-     * @param question   用户子问题文本
-     * @param intentNode 关联的意图节点（含 mcpToolId 和可选的参数提取模板）
-     * @return MCP 请求对象，工具不存在时返回 null
-     */
-    private MCPRequest buildMcpRequest(String question, IntentNode intentNode) {
+    private CallToolResult executeSingleMcpTool(String question, IntentNode intentNode) {
         String toolId = intentNode.getMcpToolId();
-        Optional<MCPToolExecutor> executorOpt = mcpToolRegistry.getExecutor(toolId);
+        Optional<McpToolExecutor> executorOpt = mcpToolRegistry.getExecutor(toolId);
         if (executorOpt.isEmpty()) {
             log.warn("MCP 工具不存在: {}", toolId);
             return null;
         }
 
-        MCPTool tool = executorOpt.get().getToolDefinition();
+        McpToolExecutor executor = executorOpt.get();
+        Tool tool = executor.getToolDefinition();
 
         String customParamPrompt = intentNode.getParamPromptTemplate();
         Map<String, Object> params = mcpParameterExtractor.extractParameters(question, tool, customParamPrompt);
 
-        return MCPRequest.builder()
-                .toolId(toolId)
-                .userQuestion(question)
-                .parameters(params != null ? params : new HashMap<>())
-                .build();
+        return executor.execute(params != null ? params : new HashMap<>());
+    }
+
+    private record ToolOutput(String toolId, CallToolResult result) {
     }
 
     /**
